# rtsched

./: .dir-locals.el  .gitignore  LICENSE  README.md  exp.py  pyproject.toml  pyrightconfig.json
hist/: readme.txt
hist/edf_exp1_data/: n_50_u_0.70_d_1.75.npz  n_50_u_0.80_d_1.75.npz  n_50_u_0.90_d_1.75.npz  n_50_u_0.99_d_1.75.npz
hist/edf_exp2_data/: n_50_u_0.90_d_1.25.npz  n_50_u_0.90_d_1.50.npz  n_50_u_0.90_d_2.00.npz
hist/edf_exp3_data/: n_100_u_0.90_d_1.75.npz  n_25_u_0.90_d_1.75.npz  n_75_u_0.90_d_1.75.npz
hist/fp_exp1_data/: n_25_u_0.70.npz  n_25_u_0.80.npz  n_25_u_0.90.npz  n_25_u_0.99.npz
hist/fp_exp2_data/: n_100_u_0.90.npz  n_50_u_0.90.npz  n_75_u_0.90.npz
rtsched/sched_test/: edf.py  fp.py  kernel.py
rtsched/sched_test/cpp/: CMakeLists.txt  kernel.cpp
rtsched/system/: generate_random.py  task.py
rtsched/tests/: test_edf.py  test_fp.py
rtsched/util/: drs.py  math.py  randfixedsum.py
